--- a/website.css
+++ b/website.css
@@ -5,7 +5,7 @@
 }
 
 header,
-header button {
+header .signup-div button {
   font-size: 20px;
   font-weight: 400;
 }
@@ -13,8 +13,6 @@ header button {
 header {
   background-color: #14121d;
   color: white;
-  /* position: fixed;
-  z-index: 1; */
   width: 100%;
 }
 
@@ -26,7 +24,7 @@ header > div {
 }
 
 header > div div:first-child,
-header > div div:last-child {
+header .signup-div {
   display: flex;
   flex: 1;
   justify-content: center;
@@ -52,7 +50,7 @@ header nav li:hover {
   cursor: pointer;
 }
 
-header button {
+header .signup-div button {
   width: 137px;
   height: 56px;
   padding: 13px 30px 13px 30px;
@@ -61,6 +59,10 @@ header button {
   column-gap: 10px;
   background: #0030ff;
   color: white;
+}
+
+header .tgl-div {
+  display: none;
 }
 
 #banner {
